Added Volunteer section

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <h2>Co-Curricular Activities</h2>
         <div class="accordion" id="accordion-cca">
           <div class="card">
-            <div class="card-header" id="headingOne">
+            <div class="card-header" id="cca-1">
               <h2 class="mb-0">
                 <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                   Executive in Finance, AIESEC in NUS
@@ -261,7 +261,44 @@
 
       <div class="container-fluid">
         <h2>Volunteer</h2>
+        <div class="accordion" id="accordion-volunteer">
+          <div class="card">
+            <div class="card-header" id="volunteer-1">
+              <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                  Chairperson, Student-initiated project, Project Cranes
+                </button>
+              </h2>
+            </div>
 
+            <div id="collapseOne" class="collapse" aria-labelledby="volunteer-1" data-parent="#accordion-volunteer">
+              <div class="card-body">
+                <p>ANov 2016 - Jul 2017</p>
+                <ul>
+                  <li>Responsible for coordinating with the person in charge at Sree Narayana Mission Home</li>
+                  <li>Organised a series of activities with the elderliesafter understanding their needs</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header" id="volunteer-2">
+              <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Committee Member, Student-initiated project, NJBT Carnival
+                </button>
+              </h2>
+            </div>
+            <div id="collapseTwo" class="collapse" aria-labelledby="volunteer-2" data-parent="#accordion-volunteer">
+              <div class="card-body">
+                <p>Jan - Jul 2017</p>
+                <ul>
+                  <li>Responsible for planning and executing the games, ensuring the safety of the elderlies</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
