--- a/index.html
+++ b/index.html
@@ -345,9 +345,11 @@
 
   <!-- Footer Section -->
   <section id="footer-section">
-    <a class="footer-link" href="https://www.linkedin.com/in/michelle-yong">LinkedIn</a>
-    <a class="footer-link" href="https://www.instagram.com/mychellexx">Instagram</a>
-    <a class="footer-link" href="https://github.com/michelleykw">Github</a>
+    <i class="social-icon fab fa-instagram"><a class="footer-link" href="https://www.instagram.com/mychellexx">Instagram</a></i>
+    <i class="social-icon fas fa-envelope"><a class="footer-link" href="mailto:michelleykw99@gmail.com">Email</a></i>
+    <i class="fab fa-linkedin"><a class="footer-link" href="https://www.linkedin.com/in/michelle-yong">LinkedIn</a></i>
+    <i class="social-icon fab fa-github"><a class="footer-link" href="https://github.com/michelleykw">Github</a></i>
+
     <p class="copyright">© 2020 Michelle Yong.</p>
   </section>
 
